--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -11,7 +11,7 @@
     <string name="menu_gallery">Gallery</string>
     <string name="menu_slideshow">Slideshow</string>
     <string name="menu_tools">Dispenser</string>
-    <string name="menu_share">Share</string>
+    <string name="menu_share">Contacts</string>
     <string name="menu_send">Send</string>
     <string name="title_activity_login_doc">Sign in</string>
     <string name="prompt_email">Email</string>
